refactor: reduce time needed to run calculations by compiling ts to js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "noEmit": true,
     "target": "es6",
     "module": "commonjs",
     "strict": true,
+    "outDir": "lib",
+    "rootDir": "src",
   },
   "include": ["src"]
 }
