--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "adventofcode",
   "version": "1.0.0",
   "description": "My solutions for challenges published on https://adventofcode.com/2022.",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "bin": {
+    "adventofcode": "./lib/index.js"
+  },
   "scripts": {
-    "start": "ts-node src/index",
+    "dev": "nodemon src/index.ts --watch 'src/**/*.ts'",
+    "start": "node lib/index.js",
+    "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +24,7 @@
   "homepage": "https://github.com/kamilmateusiak/adventofcode-2022-js#readme",
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
